# cmpt433-as3

./: CMakeLists.txt
app/: CMakeLists.txt
app/include/: beatbox.h  periodTimer.h  udp_server.h
app/src/: audioMixer.c  beatbox.c  main.c  periodTimer.c  udp_server.c
as3-server/: server.js
as3-server/lib/: beatbox_server.js
as3-server/public/: index.html
as3-server/public/javascripts/: beatbox_ui.js
hal/: CMakeLists.txt
hal/include/hal/: accelerometer.h  joystick.h  joystick_press.h  lcd_display.h  rotary_encoder.h
hal/src/: accelerometer.c  joystick.c  joystick_press.c  lcd_display.c  rotary_encoder.c
